--- a/css/index.css
+++ b/css/index.css
@@ -20,11 +20,6 @@ body{
     height: 2rem;
     margin:  1rem 0 1rem 25rem;
 }
-.dropdown{
-  visibility: hidden;
-  height: 1rem;
-  text-align: center;
-}
 header h2{
       text-decoration-line: underline;
       color: dimgrey;
@@ -157,7 +152,7 @@ dt{
 }
 .menu{
     text-decoration-line: none;
-    font-size: large;
+    font-size: x-large;
     color: black;
     padding: 1rem 105rem 1rem 1rem;
     height: 1rem;
@@ -260,11 +255,19 @@ i{
 }
 
 /*** MEDIA QUERY***/
-@media(max-width:1500px){
-    .head{
-        visibility: hidden;
-        display: none;
+@media only screen and (max-width:1500px){
+body{
+    background-color: white;
     }
+div h2{
+    visibility: hidden;
+    display: none;
+    }
+.logo{
+    margin-left: 1rem;
+    height: 2rem;
+    margin-top: 1rem;
+}
 body{
     margin: 0%;
     background-color: white;
@@ -275,15 +278,10 @@ body{
      background-color: white;
 }
 .nav{
-    visibility: hidden;
     font-size: 18px;
     text-decoration-line: none;
     color: black;
-    display: none;
-    opacity: 1;
-    z-index: 1;
-    top: 0;
-    left: 0;
+    display: list-item;
  } 
  .nav-body h2{
      font-size: 2rem;
@@ -300,23 +298,6 @@ body{
     visibility: hidden;
     display: none;
 }
-.dropdown{
-   visibility: visible;
-   height: 4rem;
-   text-decoration-line: none;
-   padding: 0 1rem 0 1rem;
-   margin:  0 0 1rem 1rem;
-   border: 1px solid black;
-}
-.nav-body :focus .nav,
-.nav-body:focus-within .nav,
-.nav-body :hover .nav{
-    visibility: visible;
-    opacity: 1;
-    z-index: 888;
-    width:5rem;
-    display: block;
-}
  p{
      text-align: center;
      line-height: 1.2;
@@ -326,8 +307,8 @@ body{
 }
 .body-2{
      grid-template-columns: 1fr;
-     background-color: bisque;
      margin:1rem 0 0 0;
+     background-color: white;
 }
 .exam-list{
        margin: 1rem 1rem 1rem 1rem;
@@ -402,9 +383,6 @@ input{
  }
  .box-2 h2 , .box-2 h4{
      color: white;
- }
- .exam-list{
-     display: none;
  }
  .Subject h2{
      visibility: hidden;
