--- a/css/index.css
+++ b/css/index.css
@@ -255,8 +255,8 @@ i{
 }
 
 /*** MEDIA QUERY***/
-@media only screen and (max-width:1500px){}
-div h2{
+@media only screen and (max-width:1500px){
+ .head{
     visibility: hidden;
     display: none;
     }
